--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Roadtrippers</title>
-
+   <!-- favicon -->
+  <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
   <!-- main font style -->
   <link href="https://fonts.googleapis.com/css?family=Nunito:300" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
